--- a/document.tex
+++ b/document.tex
@@ -34,7 +34,7 @@
 	\setYourName{Stefanos Stefanou}
 	\setYourJobTitle{Software Engineer}
 	\setYourMobileNo{+44(0)7706066959}
-	\setYourHomeNo{TODO}
+	%\setYourHomeNo{TODO}
 	\setYourEmailAddr{stefannstefanou@gmail.com}
 	\setYourWebAddr{http://stefanos.isactually.cool}
 	
@@ -99,6 +99,17 @@
 	% move, duplicate, delete or comment out the following line if necessary
 	\newpage
 	
+	\newHeading{Education}
+	
+	\newRole{2018-2022}
+	{Bsc Computer Science}
+	{University of Reading}
+	{\begin{itemize}
+			\item First Class Honours
+			\item Dissertation: An AI-assisted decision making system for thyroid nodule classification 
+		\end{itemize}
+	}
+	
 	% This is training you have done in your own time
 	\newHeading{Dinstictions}
 	
@@ -130,16 +141,7 @@
 	\newCourse{2018}{\href{https://www.bookworld.gr/gr/book/bkid/234405/java-gia-ligous}{'Java for the few'(Book)} }{\small{Worked on 3 chapters, Book is used on 2 universities (Uniwa,AUEB) }}{}
 	
 	
-	\newHeading{Education}
 	
-	\newRole{2018-2022}
-	{Bsc Computer Science}
-	{University of Reading}
-	{\begin{itemize}
-			\item First Class Degree
-			\item Dissertation: An AI-assisted decision making system for thyroid nodule classification 
-	\end{itemize}
-	}
 	
 	
 	
